--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,1 +1,33 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: myapp-deployment
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: myapp-container
+        image: your-dockerhub-username/my-java-app:latest  # Use your Docker image
+        ports:
+        - containerPort: 8080  # Ensure this matches the port your app listens on
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp-service
+spec:
+  type: NodePort
+  ports:
+    - port: 80              # Port the service will expose
+      targetPort: 8080     # Port on the container to forward to
+      nodePort: 30000      # Optional: NodePort (30000-32767) or remove to auto-assign
+  selector:
+    app: myapp
