--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp-container
-        image: your-dockerhub-username/my-java-app:latest  # Use your Docker image
+        image: shama123456/devopsk8s:latest  # Use your Docker image
         ports:
         - containerPort: 8080  # Ensure this matches the port your app listens on
 
