--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -13,17 +13,10 @@ spec:
         app: myapp
     spec:
       containers:
-        - name: myapp-container
-          image: shama123456/devopsk8s:latest
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              memory: "256Mi"  # Minimum memory that will be allocated
-              cpu: "500m"      # Minimum CPU that will be allocated
-            limits:
-              memory: "512Mi"  # Maximum memory the container can use
-              cpu: "1"         # Maximum CPU the container can use
+      - name: myapp-container
+        image: shama123456/devopsk8s:latest  # Use your Docker image
+        ports:
+        - containerPort: 8080  # Ensure this matches the port your app listens on
 
 ---
 apiVersion: v1
@@ -31,9 +24,10 @@ kind: Service
 metadata:
   name: myapp-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-    - port: 80
-      targetPort: 8080
+    - port: 80              # Port the service will expose
+      targetPort: 8080     # Port on the container to forward to
+      nodePort: 30000      # Optional: NodePort (30000-32767) or remove to auto-assign
   selector:
     app: myapp
